@@ -140,7 +140,13 @@ fi
 BRLTTY_SUMMARY_ITEM([init-path], [init_path])
 
 AC_PROG_MAKE_SET
+
 AC_PROG_CC
+if test "${GCC}" = "yes"
+then
+   CFLAGS="${CFLAGS} -Wall"
+fi
+
 if test -z "${CXX}"
 then
    if test "${GCC}" = "yes"
@@ -157,6 +163,11 @@ then
    fi
 fi
 AC_PROG_CXX
+if test "$GXX" = "yes"
+then
+   CXXFLAGS="${CXXFLAGS} -Wall"
+fi
+
 AC_CHECK_PROGS([LD], [ld], [ld])
 AC_PROG_RANLIB
 AC_PROG_YACC
@@ -442,6 +453,73 @@ AC_SUBST([install_api])
 AC_SUBST([api_keyfile], [brlapi.key])
 BRLTTY_DEFINE_EXPANDED([BRLAPI_AUTHFILE], ["${api_keyfile}"])
 
+AC_CACHE_CHECK([for linkage editor flags], [brltty_cv_prog_ld_flags], [dnl
+case "${host_os}"
+in
+   linux*)
+      brltty_cv_prog_ld_flags="-strip-all -export-dynamic -rpath ${execute_root}${library_directory}"
+      ;;
+   solaris*)
+      brltty_cv_prog_ld_flags="-s -R ${execute_root}${library_directory}"
+      ;;
+   hpux*)
+      brltty_cv_prog_ld_flags="-s -E +s +b ${execute_root}${library_directory}"
+      ;;
+   *)
+      brltty_cv_prog_ld_flags=""
+      ;;
+esac])
+brltty_link_flags="${brltty_cv_prog_ld_flags}"
+
+AC_CACHE_CHECK([for static linkage flag], [brltty_cv_prog_ld_static], [dnl
+case "${host_os}"
+in
+   linux*)
+      brltty_cv_prog_ld_static="-static"
+      ;;
+   solaris*)
+      brltty_cv_prog_ld_static="-dn"
+      ;;
+   hpux*)
+      brltty_cv_prog_ld_static="-Bstatic"
+      ;;
+   *)
+      brltty_cv_prog_ld_static=""
+      ;;
+esac])
+brltty_static_flag="${brltty_cv_prog_ld_static}"
+BRLTTY_ARG_ENABLE(
+   [standalone-programs],
+   [statically linked executables], [dnl
+   brltty_standalone_programs="yes"
+   brltty_link_flags="${brltty_link_flags} ${brltty_static_flag}"
+])
+
+LDFLAGS="${LDFLAGS} -Wl,`echo "${brltty_link_flags}" | sed -e '
+s/^ *//
+s/ *$//
+s/  */ /g
+y/ /,/
+'`"
+
+BRLTTY_SEARCH_LIBS([sched_yield], [rt])
+BRLTTY_SEARCH_LIBS([sin], [m])
+BRLTTY_SEARCH_LIBS([pow], [m])
+case "${host_os}"
+in
+   linux*)
+      BRLTTY_SEARCH_LIBS([dlopen], [dl])
+      ;;
+   solaris*)
+      BRLTTY_SEARCH_LIBS([dlopen], [dl])
+      ;;
+   hpux*)
+      BRLTTY_SEARCH_LIBS([shl_load], [dld])
+      ;;
+   *)
+      ;;
+esac
+
 BRLTTY_BRAILLE_DRIVER([al], [Alva])
 BRLTTY_BRAILLE_DRIVER([bl], [BrailleLite])
 BRLTTY_BRAILLE_DRIVER([bn], [BrailleNote])
@@ -602,82 +680,6 @@ fi
 screen_object="scr_${screen_driver}.${OBJEXT}"
 AC_SUBST([screen_object])
 BRLTTY_SUMMARY_ITEM([screen-driver], [screen_driver])
-
-AC_CACHE_CHECK([for linkage editor flags], [brltty_cv_prog_ld_flags], [dnl
-case "${host_os}"
-in
-   linux*)
-      brltty_cv_prog_ld_flags="-strip-all -export-dynamic -rpath ${execute_root}${library_directory}"
-      ;;
-   solaris*)
-      brltty_cv_prog_ld_flags="-s -R ${execute_root}${library_directory}"
-      ;;
-   hpux*)
-      brltty_cv_prog_ld_flags="-s -E +s +b ${execute_root}${library_directory}"
-      ;;
-   *)
-      brltty_cv_prog_ld_flags=""
-      ;;
-esac])
-brltty_link_flags="${brltty_cv_prog_ld_flags}"
-
-AC_CACHE_CHECK([for static linkage flag], [brltty_cv_prog_ld_static], [dnl
-case "${host_os}"
-in
-   linux*)
-      brltty_cv_prog_ld_static="-static"
-      ;;
-   solaris*)
-      brltty_cv_prog_ld_static="-dn"
-      ;;
-   hpux*)
-      brltty_cv_prog_ld_static="-Bstatic"
-      ;;
-   *)
-      brltty_cv_prog_ld_static=""
-      ;;
-esac])
-brltty_static_flag="${brltty_cv_prog_ld_static}"
-BRLTTY_ARG_ENABLE(
-   [standalone-programs],
-   [statically linked executables], [dnl
-   brltty_link_flags="${brltty_link_flags} ${brltty_static_flag}"
-])
-
-LDFLAGS="${LDFLAGS} -Wl,`echo "${brltty_link_flags}" | sed -e '
-s/^ *//
-s/ *$//
-s/  */ /g
-y/ /,/
-'`"
-
-if test "${GCC}" = "yes"
-then
-   CFLAGS="${CFLAGS} -Wall"
-fi
-
-if test "$GXX" = "yes"
-then
-   CXXFLAGS="${CXXFLAGS} -Wall"
-fi
-
-BRLTTY_SEARCH_LIBS([sched_yield], [rt])
-BRLTTY_SEARCH_LIBS([sin], [m])
-BRLTTY_SEARCH_LIBS([pow], [m])
-case "${host_os}"
-in
-   linux*)
-      BRLTTY_SEARCH_LIBS([dlopen], [dl])
-      ;;
-   solaris*)
-      BRLTTY_SEARCH_LIBS([dlopen], [dl])
-      ;;
-   hpux*)
-      BRLTTY_SEARCH_LIBS([shl_load], [dld])
-      ;;
-   *)
-      ;;
-esac
 
 AC_SUBST([library_prefix], [lib])
 AC_SUBST([library_name], ["${library_prefix}${PACKAGE_NAME}"])
